syntax = "proto3";

package com.mixi.mercury.api;

option go_package = "github.com/matsuu/go-mixi2/gen/com/mixi/mercury/api;api";

message CreatePostRequest {
  string text = 1;
  optional string reply_to = 2;
  optional string media_id = 4;
  optional string community_id = 7;
}

message ImageInfo {
  string large_url = 1;
  string large_mime_type = 2;
  int32 large_height = 3;
  int32 large_width = 4;
  string small_url = 5;
  string small_mime_type = 6;
  int32 small_height = 7;
  int32 small_width = 8;
  string blur_hash = 9;
}

message MediaItem {
  string media_id = 1;
  int32 unknown3 = 3;
  int32 unknown4 = 4; // 1->2->3 (ok?)
  optional ImageInfo image = 6;
}

message Timestamp {
  int64 timestamp = 1;
}

message CommunityInfo {
  string id = 1;
  string title = 2;
  MediaItem media = 6;
  string unknown11 = 11;
}

message StampInfo {
  string name = 1;
  string stamp_url = 2;
}

message Stamp {
  StampInfo stamp_info = 1;
  int32 click = 2;
}

message Post {
  string id = 1;
  string timestamp_ns = 2;
  Timestamp created_at = 3;
  string unknown4_id = 4;
  optional MediaItem media = 7;
  optional int32 unknown8 = 8;
  optional int32 unknown9 = 9;
  optional string unknown10 = 10;
  string text = 12;
  optional string parent_post_id = 13;
  optional Post parent_post = 19;
  optional int32 unkonwn21 = 21;
  optional CommunityInfo community = 25;
  repeated Stamp stamps = 29;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostsRequest {
  string text = 1;
}

message GetPostsResponse {
  Post post = 1;
}

message SwitchPersonaRequest {
  string persona_id = 1;
}

message SwitchPersonaResponse {}

message GetPersonasRequest {
  string persona_id = 1;
}

message GetPersonasResponse {
  Persona persona = 1;
}

message Persona {
  string persona_id = 1;
  string account_name = 2;
  string display_name = 3;
  string icon_url = 4;
  string bio = 8;
  string profile_url = 9;
  Timestamp created_at = 17;
}

message GetMediaRequest {
  string media_id = 1;
}

message GetMediaResponse {
  MediaItem media = 1;
}

message GetSubscribingFeedsRequest {
  optional string next_timestamp_ns = 1;
  int32 count = 2;
}

message GetSubscribingFeedsResponse {
  repeated Feed feeds = 1;
  string next_timestamp_ns = 2;
}

message Feed {
  int32 unknown1 = 1;
  string timestamp_ns = 2;
  Post post = 3;
}

message GetRecommendedTimelineRequest {
  optional string next_timestamp_ns = 1;
  int32 count = 3;
}

message GetRecommendedTimelineResponse {
  repeated Post posts = 1;
}

service MercuryService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}
  rpc SwitchPersona(SwitchPersonaRequest) returns (SwitchPersonaResponse) {}
  rpc GetPersonas(GetPersonasRequest) returns (GetPersonasResponse) {}
  rpc GetMedia(GetMediaRequest) returns (GetMediaResponse) {}
  rpc GetSubscribingFeeds(GetSubscribingFeedsRequest) returns (GetSubscribingFeedsResponse) {}
  rpc GetRecommendedTimeline(GetRecommendedTimelineRequest) returns (GetRecommendedTimelineResponse) {}
}
